--- a/web/assets/sass/partials/views/_software.scss
+++ b/web/assets/sass/partials/views/_software.scss
@@ -4,9 +4,12 @@
     margin-top: 5%;
     th {
       width: 34%;
+      padding-left: 10px;
+      padding-right: 10px;
     }
     td {
-      width: 33%;
+      width: 66%;
+      text-align: center;
     }
   }
 }
